--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  
+  <h1>Navigation Bar Demo</h1>
+  <ul>
+    <li><a href="https://www.google.com" target="_blank">Home</a></li>
+    <li><a href="">About</a></li>
+    <li><a href="">Services</a></li>
+    <li><a href="">Contact</a></li>
+  </ul>
 </body>
 </html>
